# RouteLogistics

./: BiggestMetric.cpp  BiggestMetric.h  CMakeLists.txt  DummyAlgorithm.cpp  DummyAlgorithm.h  GreedyAlgorithm.cpp  GreedyAlgorithm.h  LongestMetric.cpp  LongestMetric.h  MetricI.h  Point.cpp  Point.h  RandomAlgorithm.cpp  RandomAlgorithm.h  SplittingAlgorithmI.h  SumDistMetric.cpp  SumDistMetric.h  main.cpp
